--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 </head>
 <body class="container">
     <header class="headcol-2">
-        <div>
+        <div> 
             <img class="image" src="verkefni4-myndir/my-recipes.svg" alt="">
         </div>
         <nav class="topnav">
+            <input type="checkbox" id="toggle" class="menuInput">
+            <label for="toggle" class="menuLabel"><span class="icon-menu"></span></label>
             <ul class="topmenu">
                 <li>
                     <a class="anotherButton" href="bread.html"><span class="icon-bread"></span> Bread</a>
@@ -44,7 +46,7 @@
     <a href="https://www.scribd.com/" target="_blank" class="augl" >
         <div class="ad">
             <div class="innihald">
-                <img src="verkefni4-myndir/cozybook.jpg" id="fadeIn">
+                <img src="verkefni4-myndir/cozybook.jpg" id="fadeIn"> 
                 <h3 id="spurning">Hefur þú ekki velt fyrir þér hvað það væri þægilegt að geta lesið hvaða bók sem er.. hvenær sem er og hversu þægilegt það væri ef það væri til eitthvert skonar forrit fyrir það!<br>en bíddu það er til.</h3>
                 <h4 id="svar">Líttu við á stærsta netbókasafn heimsins!<br> Scribd</h4>
                 <button class="thoughtbot">Skoða nánar...</button>  
